[workspace]
resolver = "2"
members = [
    "examples/*",
]

[package]
name = "egui-video"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "a video library for egui"
repository = "https://github.com/bu5hm4nn/egui-video"
readme = "README.md"
authors = ["n00kii", "bu5hm4nn"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
from_bytes = ["dep:tempfile"]

[workspace.dependencies]
egui = { git = "https://github.com/mikedilger/egui", rev = "e1e672777929cf4241769de263c40d8978a19228", features = [ "default" ] }
eframe = { git = "https://github.com/mikedilger/egui", rev = "e1e672777929cf4241769de263c40d8978a19228", features = [ "default" ] }
rfd = "0.11.0"
ffmpeg-next = { git = "https://github.com/mikedilger/rust-ffmpeg.git", rev = "2f5d8a3714247243b892d7927bad36e98c1aeb06" }
sdl2 = { version = "0.37", features = [ "bundled" ] }

[dependencies]
egui = { workspace = true }
ffmpeg-next = { workspace = true }
sdl2 = { workspace = true }
anyhow = "1.0.66"
timer = "0.2.0"
chrono = "0.4.22"
tempfile = {version = "3.3.0", optional = true}
ringbuf = "0.3.1"
parking_lot = "0.12.1"
itertools = "0.10.5"
